Fix image alignment

--- a/src/ui/components/common/avatar.scss
+++ b/src/ui/components/common/avatar.scss
@@ -9,11 +9,10 @@
     }
 
     &__wrapper {
-        //display: flex;
         cursor: pointer;
     }
 
-    line-height: 1;
+    //line-height: 1;
 
     &__image,
     &__text {
@@ -23,6 +22,7 @@
         width: 1.5em;
         height: 1.5em;
         margin: auto;
+        vertical-align: bottom;
 
         &--rounded {
             border-radius: 50%;
